# zephyr

./: debug.conf  west.yml
arch/common/: gen_isr_tables.py
cmake/modules/: FindHostTools.cmake
doc/releases/: migration-guide-4.4.rst  migration-guide-4.5.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.mec5  Kconfig.xec  adc_mchp_mec5_sar.c  adc_mchp_xec.c  adc_mchp_xec_v2.c
drivers/bbram/: CMakeLists.txt  Kconfig  Kconfig.mec5  Kconfig.xec  bbram_mchp_mec5.c  bbram_xec.c
drivers/clock_control/: clock_control_mchp_xec.c  clock_control_mchp_xec.h
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.mec5  Kconfig.xec  counter_mchp_mec5_btmr.c  counter_mchp_mec5_rtmr.c  counter_mchp_xec.c  counter_mchp_xec_btimer.c
drivers/crypto/: Kconfig  crypto_mchp_xec_symcr.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.mchp_xec  Kconfig.mec5  Kconfig.xec  dma_mchp_mec5.c  dma_mchp_xec.c
drivers/eeprom/: CMakeLists.txt  Kconfig  Kconfig.mec5  eeprom_mchp_mec5.c  eeprom_mchp_xec.c
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.mec5  entropy_mchp_mec5.c
drivers/espi/: CMakeLists.txt  Kconfig  Kconfig.mchp_mec5  Kconfig.mec5  Kconfig.xec  Kconfig.xec_v2  (+15 more)
kernel/: idle.c  sched.c  thread.c
modules/: Kconfig.microchip
modules/trusted-firmware-m/microchip/mec176x/: CMakeLists.txt  config.cmake  cpuarch.cmake
modules/trusted-firmware-m/microchip/mec176x/ns/: cpuarch_ns.cmake
samples/boards/microchip/i2c-ndd/: CMakeLists.txt  app.overlay  prj.conf  sample.yaml
samples/boards/microchip/i2c-ndd/src/: main.c  target_tests.c  target_tests.h
samples/drivers/i3c/host/: CMakeLists.txt  Kconfig  prj.conf
samples/drivers/i3c/host/boards/: mec_assy6941_mec1753_qsz.overlay
samples/drivers/i3c/host/src/: host.c  main.c
samples/drivers/i3c/loopback/: CMakeLists.txt  Kconfig  prj.conf
samples/drivers/i3c/loopback/boards/: mec_assy6941_mec1753_qsz.overlay
samples/drivers/i3c/loopback/src/: main.c
samples/ecfw-zephyr/: CMakeLists.txt  Kconfig  prj_mec1501modular_assy6885.conf  prj_mec172xevb_assy6906.conf
samples/ecfw-zephyr/app/debug/: postcodemgmt.c  postcodemgmt.h
samples/ecfw-zephyr/app/kbchost/: kbchost.c  kbchost.h  keyboard_utility.c  keyboard_utility.h
samples/ecfw-zephyr/app/peripheral_management/: periphmgmt.c  periphmgmt.h  pwrbtnmgmt.c  pwrbtnmgmt.h
samples/ecfw-zephyr/app/power_sequencing/: deepsx.c  dswmode.c  dswmode.h  espi_hub.c  espi_hub.h  pwrplane.c  pwrplane.h
samples/ecfw-zephyr/app/smchost/: acpi_region.h  sci.c  sci.h  smc.c  smc.h  smchost.c  smchost.h  smchost_extended.h  smchost_info.c  smchost_pm.c
samples/ecfw-zephyr/boards/: CMakeLists.txt  board.c  board.h  board_config.h
samples/ecfw-zephyr/boards/microchip/: adl_mec172x.c  adl_mec172x.h  tgl_mec1501.c
samples/ecfw-zephyr/drivers/: CMakeLists.txt  acpi.h  acpi_mec15xx.c  acpi_mec172x.c  eeprom.c  eeprom.h  fan_mec15xx.c  fan_mec172x.c  gpio_ec.h  gpio_mec15xx.c  gpio_mec172x.c  kbs_keymap.h  kbs_matrix.c  kbs_matrix.h  max6958.c  max6958.h  port80display.c  ps2kbaux.c  vci.c  vci_mec172x.c
samples/ecfw-zephyr/misc/: flashhdr.c  flashhdr.h  task_handler.c
tests/drivers/watchdog/wdt_basic_api/: CMakeLists.txt  microchip_mec5_noinit.ld
tests/drivers/watchdog/wdt_basic_api/boards/: mec_assy6941_mec1753qsz.overlay
tests/drivers/watchdog/wdt_basic_api/src/: test_wdt.c
(+1074 files in other folders)
